{
    "name": "ShipInput",
    "maps": [
        {
            "name": "StartGame",
            "id": "04f589d0-9ecb-4599-9866-72412b1983f7",
            "actions": [
                {
                    "name": "PressToStart",
                    "type": "Button",
                    "id": "5b696c5a-e73b-4c7f-a21e-ae1ae4e17843",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1398cd94-7b68-486e-922f-933853ba695d",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressToStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "AsteroidShip",
            "id": "07425396-4d9d-4da7-a9b2-0b725e2502f8",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "8f662243-818a-47fc-8e26-8bd75762045c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "b2bbbafa-2ce4-467f-8d1d-6893d390fbea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "0c86237f-0bc6-401c-bb9b-016c2b6ab1fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "328118e2-1102-4d37-a638-4a69c87107e1",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5f379e7f-7c6b-4f5e-b994-45b68c53e7cd",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "44ad9467-5a3b-4ab1-aa44-ee877ae26a2d",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "89f09d42-b1d6-47d7-9e28-7bdf80926f01",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12e15fa3-9318-4215-bb11-d89949e5dbca",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "EndGame",
            "id": "52597a64-4002-4cb5-aa5c-db07cfa3d81d",
            "actions": [
                {
                    "name": "PressToEnd",
                    "type": "Button",
                    "id": "ca9ad4fc-e6ad-4733-8492-d9cfaef9ed3c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3e87b40f-be4e-4576-9618-7f7240811652",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressToEnd",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}